# app/Http/Controllers/Controller.php
@@ -9,20 +9,28 @@ use Illuminate\Routing\Controller as BaseController;
 
 //The annotation that are added here are used to generate the JSON. The generated JSON can be seen in api-docs.json
 //The JSON is sent to the swagger view (index.blade.php)
- /**
- * @OA\Info(
- *      version="1.0.0",
- *      title="Plants API",
- *      description="Alanna plant API",
- *      @OA\Contact(
- *          email="alanna.amrs@gmail.com"
- *      ),
- *     @OA\License(
- *         name="Apache 2.0",
- *         url="https://www.apache.org/licenses/LICENSE-2.0.html"
- *     )
- * )
- */
+/**
+* @OA\Info(
+*      version="1.0.0",
+*      title="Plants API",
+*      description="Alanna plant API",
+*      @OA\Contact(
+*          email="alanna.amrs@gmail.com"
+*      ),
+*     @OA\License(
+*         name="Apache 2.0",
+*         url="https://www.apache.org/licenses/LICENSE-2.0.html"
+*     )
+* )
+* @OA\SecurityScheme(
+*      securityScheme="bearerAuth",
+*      in="header",
+*      name="bearerAuth",
+*      type="http",
+*      scheme="bearer",
+*      bearerFormat="JWT",
+* )
+*/
 
 class Controller extends BaseController
 {
