# app/Http/Controllers/ProviderController.php
@@ -15,7 +15,7 @@ class ProviderController extends Controller
     * @OA\Get(
     *     path="/api/providers",
     *     summary="Get all Providers",
-    *     description="Displays all the plants",
+    *     description="Displays all the providers",
     *     tags={"Providers"},
     *      @OA\Response(
     *          response=200,
@@ -42,32 +42,6 @@ class ProviderController extends Controller
     }
 
     /**
-    * 
-    * @OA\Post(
-    *      path="/api/providers",
-    *      operationId="create_provider",
-    *      tags={"Providers"},
-    *      summary="Create a Provider",
-    *      description="Stores the provider in the DB",
-    *      @OA\RequestBody(
-    *         required=true,
-    *         @OA\JsonContent(
-    *            required={"name", "logo", "info", "email", "telephone"},
-    *            @OA\Property(property="name", type="string", format="string", example="Plant inc."),
-    *            @OA\Property(property="logo", type="string", format="string", example="https://xyz.com"),
-    *            @OA\Property(property="info", type="string", format="string", example="Get wonderful plants"),
-    *            @OA\Property(property="email", type="string", format="string", example="abc@gmail.com"),
-    *            @OA\Property(property="telephone", type="integer", format="integer", example="123-546-3345")
-    *          )
-    *      ),
-    *     @OA\Response(
-    *          response=200, description="Success",
-    *          @OA\JsonContent(
-    *             @OA\Property(property="status", type="integer", example=""),
-    *             @OA\Property(property="data",type="object")
-    *          )
-    *      )
-    * ) 
     * Store a newly created resource in storage.
     *
     * @param  \Illuminate\Http\StoreProviderRequest  $request
@@ -82,32 +56,6 @@ class ProviderController extends Controller
     }
 
     /**
-    * @OA\Get(
-    *     path="/api/providers/{id}",
-    *     summary="Get Providers by ID",
-    *     description="Gets a provider by ID",
-    *     tags={"Providers"},
-    *          @OA\Parameter(
-    *          name="id",
-    *          description="provider id",
-    *          required=true,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="integer")
-    *          ),
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation"
-    *       ),
-    *      @OA\Response(
-    *          response=401,
-    *          description="Unauthenticated",
-    *      ),
-    *      @OA\Response(
-    *          response=403,
-    *          description="Forbidden"
-    *      )
-    * )
     *
     * Display the specified resource.
     *
@@ -120,41 +68,6 @@ class ProviderController extends Controller
     }
 
     /**
-    * @OA\Put(
-    *      path="/api/providers",
-    *      operationId="update_provider",
-    *      tags={"Providers"},
-    *      summary="Update a Provider",
-    *      description="Stores the provider in the DB",
-    *         @OA\Parameter(
-    *         name="id",
-    *         description="provider id",
-    *         required=true,
-    *         in="path",
-    *         @OA\Schema(
-    *         type="integer")
-    *         ),
-    *      @OA\RequestBody(
-    *         required=true,
-    *         @OA\JsonContent(
-    *            required={"id","name", "logo", "info", "email", "telephone"},
-    *            @OA\Property(property="id", type="number" example="1"),
-    *            @OA\Property(property="name", type="string", format="string", example="Plant inc."),
-    *            @OA\Property(property="logo", type="string", format="string", example="https://xyz.com"),
-    *            @OA\Property(property="info", type="string", format="string", example="Get wonderful plants"),
-    *            @OA\Property(property="email", type="string", format="string", example="abc@gmail.com"),
-    *            @OA\Property(property="telephone", type="integer", format="integer", example="123-546-3345")
-    *          )
-    *      ),
-    *     @OA\Response(
-    *          response=200, description="Success",
-    *          @OA\JsonContent(
-    *             @OA\Property(property="status", type="integer", example=""),
-    *             @OA\Property(property="data",type="object")
-    *          )
-    *      )
-    * )
-    * 
     * Update the specified resource in storage.
     *
     * @param  \Illuminate\Http\UpdateProviderRequest  $request
@@ -170,26 +83,6 @@ class ProviderController extends Controller
     }
 
     /**
-     * @OA\Delete(
-     *    path="/api/providers/{id}",
-     *    operationId="destroy_provider",
-     *    tags={"Providers"},
-     *    summary="Delete a Provider",
-     *    description="Delete Provider",
-     *    @OA\Parameter(name="id", in="path", description="Id of a Provider", required=true,
-     *        @OA\Schema(type="integer")
-     *    ),
-     *    @OA\Response(
-     *         response=204,
-     *         description="Success",
-     *         @OA\JsonContent(
-     *         @OA\Property(property="status_code", type="integer", example="204"),
-     *         @OA\Property(property="data",type="object")
-     *          )
-     *       )
-     *    )
-     * )
-     * 
      * Remove the specified resource from storage.
      *
      * @param  \App\Models\Provider  $provider
